--- a/html/PBWAD/PBWAD020000.html
+++ b/html/PBWAD/PBWAD020000.html
@@ -152,7 +152,7 @@
 								</dd>
 							</dl>
 							<div class="mt24">
-								<a href="#" class="anchor chevron fs-16 fc-status-active normal-wrap a-start p0">신한글로벌탄소중립솔루션증권투자신탁(H)(주식)</a>
+								<a href="#" class="anchor chevron fs-16 fc-status-active normal-wrap p0">신한글로벌탄소중립솔루션증권투자신탁(H)(주식)</a>
 							</div>
 
 							<div class="memo-btn mt24">
@@ -179,7 +179,7 @@
 								</dd>
 							</dl>
 							<div class="mt24">
-								<a href="#" class="anchor chevron fs-16 fc-status-active normal-wrap a-start p0">신한글로벌탄소중립솔루션증권투자신탁(H)(주식)</a>
+								<a href="#" class="anchor chevron fs-16 fc-status-active normal-wrap p0">신한글로벌탄소중립솔루션증권투자신탁(H)(주식)</a>
 							</div>
 
 							<div class="memo-btn mt24">
