--- a/html/PBWCH/PBWCH009902_noresult.html
+++ b/html/PBWCH/PBWCH009902_noresult.html
@@ -107,7 +107,7 @@
 
 
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-search">
+	<div class="micromodal-slide micromodal-slide-bottom micromodal-slide-bottom-full modal" id="modal-search">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 				<div class="modal__header">
@@ -123,8 +123,9 @@
 						<div class="sticky-content content-fluid">
 							<div class="sticky-content-inner">
 								<!-- form -->
-								<div class="form">
+								<div class="form is-searched">
 									<div class="label"></div>
+									<div class="search-history-back"><button type="button" aria-label="검색메뉴 닫기"></button></div>
 									<div class="input-wrap input-btn">
 										<input type="text" placeholder="펀드/지수명으로 검색해 보세요." aria-label="검색">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
