--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -89,11 +89,11 @@
 				<div class="content">
 
 					<!-- visual-headline -->
-					<div class="visual-headline">
+					<div class="visual-headline content-fluid">
 						<figure>
 							<picture>
-								<source srcset="/resources/images/PBWMA/image_headline.svg">
-								<img src="/resources/images/PBWMA/image_headline.svg" alt="">
+								<source srcset="/resources/images/PBWMA/image_headline.png">
+								<img src="/resources/images/PBWMA/image_headline.png" alt="">
 							</picture>
 							<figcaption>
 								<span><b>김우리</b>님 안녕하세요</span>
@@ -376,8 +376,16 @@
 								<div class="swiper-slide">
 									<a href="#">
 										<picture>
-											<source srcset="/resources/images/PBWMA/img_banner01.png">
+											<source srcset="/resources/images/PBWMA/img_banner02.png">
 											<img src="/resources/images/PBWMA/img_banner02.png" alt="">
+										</picture>
+									</a>
+								</div>
+								<div class="swiper-slide">
+									<a href="#">
+										<picture>
+											<source srcset="/resources/images/PBWMA/img_banner03.png">
+											<img src="/resources/images/PBWMA/img_banner03.png" alt="">
 										</picture>
 									</a>
 								</div>
