--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -502,8 +502,14 @@
 
 						<!-- group-form -->
 						<div class="group-form mt40">
-							<div class="group-title">
+							<div class="group-title flex-column a-start">
 								<strong class="title-medium">메모</strong>
+								<div class="inp inp-medium my10">
+									<label>
+										<input type="checkbox">
+										<span class="label-title">나만보기</span>
+									</label>
+								</div>
 							</div>
 							<div class="group-content">
 								<div class="form">
