--- a/html/index.html
+++ b/html/index.html
@@ -729,7 +729,14 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWLO01002_05</a></td>
 					</tr>
-
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>타이틀 추가 화면</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWLO01002_reg</a></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
