--- a/html/PBWIN/PBWIN000000.html
+++ b/html/PBWIN/PBWIN000000.html
@@ -95,15 +95,15 @@
 					</style>
 
 					<!-- content-visual -->
-					<div class="content-visual content-fluid px0 pt0 relative">
-						<div class="text" style="position:absolute;left:24px;top:65px;">
-							<strong class="title-medium px0">우리은행 <span style="color:#08B900;" class="fw-800">VIP</span>고객님을 위한 </strong>
-							<h2 class="headline-large px0">라이프스타일 매거진</h2>
-						</div>
-						<picture style="flex:1 1 100%;background: linear-gradient(180deg, #FFF 0%, #EAF4FF 100%);display:flex;align-items:flex-end;justify-content:flex-end;">
+					<div class="content-visual content-fluid picture-right a-start" style="height:300px;background-color:var(--surface-surface)">
+						<picture>
 							<source srcset="/resources/images/PBWIN/img_visual01.png 2x">
-							<img src="/resources/images/PBWIN/img_visual01.png" alt="" style="height:300px;width:100%;object-fit:contain;">
+							<img src="/resources/images/PBWIN/img_visual01.png" alt="">
 						</picture>
+						<div class="text mt20">
+							<strong class="title-medium px0 fc-typography-black">우리은행 <span style="color:#08B900;" class="fw-800">VIP</span>고객님을 위한 </strong>
+							<h2 class="headline-large px0 fc-typography-black">라이프스타일 매거진</h2>
+						</div>
 					</div>
 					<!-- //content-visual -->
 
