--- a/html/PBWRE/PBWRE000000.html
+++ b/html/PBWRE/PBWRE000000.html
@@ -95,15 +95,16 @@
 					</style>
 
 					<!-- content-visual -->
-					<div class="content-visual">
-						<div class="text pl8">
-							<strong class="title-medium px0">매일매일 확인하는 </strong>
-							<h2 class="headline-large px0">전 세계 경제 이슈</h2>
-						</div>
+					<div class="content-visual content-fluid picture-left" style="height:156px;">
 						<picture>
 							<source srcset="/resources/images/PBWRE/img_visual01.png 2x">
 							<img src="/resources/images/PBWRE/img_visual01.png" alt="">
 						</picture>
+						<div class="text" style="margin-top:56px;">
+							<strong class="title-medium px0">매일매일 확인하는 </strong>
+							<h2 class="headline-large px0">전 세계 경제 이슈</h2>
+						</div>
+
 					</div>
 					<!-- //content-visual -->
 
@@ -167,7 +168,7 @@
 
 
 	<script>
-		$swal.fire02('푸시알림이 꺼져 있습니다. <div class="pt5"></div> 휴대폰의 설정 &gt; 알림 &gt; RM/PB WON(가칭)에서 알림을 허용해주세요. ', 'caution', '설정하러 가기', true, '다음에');
+		// $swal.fire02('푸시알림이 꺼져 있습니다. <div class="pt5"></div> 휴대폰의 설정 &gt; 알림 &gt; RM/PB WON(가칭)에서 알림을 허용해주세요. ', 'caution', '설정하러 가기', true, '다음에');
 	</script>
 
 </body>
