--- a/html/PBWFI/PBWFI050000.html
+++ b/html/PBWFI/PBWFI050000.html
@@ -253,6 +253,17 @@
 						<p class="description info body-small fc-typography-caption mt32">조회시점별 최신 고시회차를 반영하며, 고시기준일 선택 시 해당일의 최종 고시회차 정보를 볼 수 있습니다.</p>
 					</div>
 
+					<!-- division-center -->
+					<div class="division-center">
+
+						<div class="no-result">
+							<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
+							<p class="body-medium fw-400">환율 정보는 영업일에만 제공하고 있습니다.</p>
+						</div>
+
+					</div>
+					<!-- //division-center -->
+
 
 
 
