--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -107,20 +107,20 @@
 
 					<!-- bs-card-wrap -->
 					<div class="bs-card-wrap mb16">
-						<input type="radio" name="rad001">
+						<input type="radio" name="rad001" />
 						<div class="bs-card ">
 							<div class="bs-typeA">
 								<div class="top">
 									<div class="left">
 										<picture class="top-logo01">
-											<source srcset="/resources/images/bs_card/bs_a_top_logo01.svg">
-											<img src="/resources/images/bs_card/bs_a_top_logo01.svg" alt="우리 마음속 첫번째 금융">
+											<source srcset="/resources/images/bs_card/bs_a_top_logo01.png">
+											<img src="/resources/images/bs_card/bs_a_top_logo01.png" alt="우리 마음속 첫번째 금융">
 										</picture>
 									</div>
 									<div class="right">
 										<picture class="top-aff01">
-											<source srcset="/resources/images/bs_card/bs_a_aff.svg">
-											<img src="/resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
+											<source srcset="/resources/images/bs_card/bs_a_aff.png">
+											<img src="/resources/images/bs_card/bs_a_aff.png" alt="우리금융그룹">
 										</picture>
 									</div>
 								</div>
@@ -134,10 +134,13 @@
 									<div class="title">
 										<div class="left">
 											<picture class="center-logo01">
-												<source srcset="/resources/images/bs_card/bs_a_center_logo01.svg">
-												<img src="/resources/images/bs_card/bs_a_center_logo01.svg" alt="우리은행">
+												<source srcset="/resources/images/bs_card/bs_a_center_logo01.png">
+												<img src="/resources/images/bs_card/bs_a_center_logo01.png" alt="우리은행">
 											</picture>
-											<object type="image/svg+xml" class="center-cfp" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
+											<picture class="center-cfp">
+												<source srcset="/resources/images/bs_card/bs_b_center_logo01.png">
+												<img src="/resources/images/bs_card/bs_b_center_logo01.png" alt="CFP">
+											</picture>
 										</div>
 										<div class="right">
 											<dl>
@@ -203,14 +206,14 @@
 								<div class="top">
 									<div class="left">
 										<picture class="top-logo01">
-											<source srcset="/resources/images/bs_card/bs_a_top_logo01.svg">
-											<img src="/resources/images/bs_card/bs_a_top_logo01.svg" alt="우리 마음속 첫번째 금융">
+											<source srcset="/resources/images/bs_card/bs_a_top_logo01.png">
+											<img src="/resources/images/bs_card/bs_a_top_logo01.png" alt="우리 마음속 첫번째 금융">
 										</picture>
 									</div>
 									<div class="right">
 										<picture class="top-aff01">
-											<source srcset="/resources/images/bs_card/bs_a_aff.svg">
-											<img src="/resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
+											<source srcset="/resources/images/bs_card/bs_a_aff.png">
+											<img src="/resources/images/bs_card/bs_a_aff.png" alt="우리금융그룹">
 										</picture>
 									</div>
 								</div>
@@ -224,10 +227,13 @@
 									<div class="title">
 										<div class="left">
 											<picture class="center-logo01">
-												<source srcset="/resources/images/bs_card/bs_a_center_logo01.svg">
-												<img src="/resources/images/bs_card/bs_a_center_logo01.svg" alt="우리은행">
+												<source srcset="/resources/images/bs_card/bs_a_center_logo01.png">
+												<img src="/resources/images/bs_card/bs_a_center_logo01.png" alt="우리은행">
 											</picture>
-											<object type="image/svg+xml" class="center-cfp" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
+											<picture class="center-cfp">
+												<source srcset="/resources/images/bs_card/bs_b_center_logo01.png">
+												<img src="/resources/images/bs_card/bs_b_center_logo01.png" alt="CFP">
+											</picture>
 										</div>
 										<div class="right">
 											<dl>
@@ -532,14 +538,14 @@
 																<div class="top">
 																	<div class="left">
 																		<picture class="top-logo01">
-																			<source srcset="/resources/images/bs_card/bs_a_top_logo01.svg">
-																			<img src="/resources/images/bs_card/bs_a_top_logo01.svg" alt="우리 마음속 첫번째 금융">
+																			<source srcset="/resources/images/bs_card/bs_a_top_logo01.png">
+																			<img src="/resources/images/bs_card/bs_a_top_logo01.png" alt="우리 마음속 첫번째 금융">
 																		</picture>
 																	</div>
 																	<div class="right">
 																		<picture class="top-aff01">
-																			<source srcset="/resources/images/bs_card/bs_a_aff.svg">
-																			<img src="/resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
+																			<source srcset="/resources/images/bs_card/bs_a_aff.png">
+																			<img src="/resources/images/bs_card/bs_a_aff.png" alt="우리금융그룹">
 																		</picture>
 																	</div>
 																</div>
@@ -553,10 +559,13 @@
 																	<div class="title">
 																		<div class="left">
 																			<picture class="center-logo01">
-																				<source srcset="/resources/images/bs_card/bs_a_center_logo01.svg">
-																				<img src="/resources/images/bs_card/bs_a_center_logo01.svg" alt="우리은행">
+																				<source srcset="/resources/images/bs_card/bs_a_center_logo01.png">
+																				<img src="/resources/images/bs_card/bs_a_center_logo01.png" alt="우리은행">
 																			</picture>
-																			<object type="image/svg+xml" class="center-cfp" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
+																			<picture class="center-cfp">
+																				<source srcset="/resources/images/bs_card/bs_b_center_logo01.png">
+																				<img src="/resources/images/bs_card/bs_b_center_logo01.png" alt="CFP">
+																			</picture>
 																		</div>
 																		<div class="right">
 																			<dl>
@@ -622,14 +631,14 @@
 																<div class="top">
 																	<div class="left">
 																		<picture class="top-logo01">
-																			<source srcset="/resources/images/bs_card/bs_a_top_logo01.svg">
-																			<img src="/resources/images/bs_card/bs_a_top_logo01.svg" alt="우리 마음속 첫번째 금융">
+																			<source srcset="/resources/images/bs_card/bs_a_top_logo01.png">
+																			<img src="/resources/images/bs_card/bs_a_top_logo01.png" alt="우리 마음속 첫번째 금융">
 																		</picture>
 																	</div>
 																	<div class="right">
 																		<picture class="top-aff01">
-																			<source srcset="/resources/images/bs_card/bs_a_aff.svg">
-																			<img src="/resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
+																			<source srcset="/resources/images/bs_card/bs_a_aff.png">
+																			<img src="/resources/images/bs_card/bs_a_aff.png" alt="우리금융그룹">
 																		</picture>
 																	</div>
 																</div>
@@ -648,7 +657,10 @@
 																					<img src="/resources/images/bs_card/bs_photo.png" alt="">
 																				</picture>
 																			</figure>
-																			<object type="image/svg+xml" class="center-cfp" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
+																			<picture class="center-cfp">
+																				<source srcset="/resources/images/bs_card/bs_b_center_logo01.png">
+																				<img src="/resources/images/bs_card/bs_b_center_logo01.png" alt="CFP">
+																			</picture>
 																		</div>
 																		<div class="right">
 																			<dl>
@@ -661,8 +673,8 @@
 																	<div class="info">
 																		<div class="left">
 																			<picture class="info-logo01">
-																				<source srcset="/resources/images/bs_card/bs_a_center_logo02.svg">
-																				<img src="/resources/images/bs_card/bs_a_center_logo02.svg" alt="우리은행">
+																				<source srcset="/resources/images/bs_card/bs_a_center_logo01.png">
+																				<img src="/resources/images/bs_card/bs_a_center_logo01.png" alt="우리은행">
 																			</picture>
 																			<div class="location">04632 서울특별시 중구 소공로 51</div>
 																			<div class="email">woori@woorifg.com</div>
@@ -718,12 +730,15 @@
 															<div class="bs-typeA">
 																<div class="top">
 																	<div class="left">
-																		<object type="image/svg+xml" class="top-logo02" data="/resources/images/bs_card/bs_a_top_logo02.svg"></object>
+																		<picture class="top-logo02">
+																			<source srcset="/resources/images/bs_card/bs_a_top_logo02.png">
+																			<img src="/resources/images/bs_card/bs_a_top_logo02.png" alt="위비프렌즈">
+																		</picture>
 																	</div>
 																	<div class="right">
 																		<picture class="top-aff01">
-																			<source srcset="/resources/images/bs_card/bs_a_aff.svg">
-																			<img src="/resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
+																			<source srcset="/resources/images/bs_card/bs_a_aff.png">
+																			<img src="/resources/images/bs_card/bs_a_aff.png" alt="우리금융그룹">
 																		</picture>
 																	</div>
 																</div>
@@ -737,10 +752,13 @@
 																	<div class="title">
 																		<div class="left">
 																			<picture class="center-logo01">
-																				<source srcset="/resources/images/bs_card/bs_a_center_logo01.svg">
-																				<img src="/resources/images/bs_card/bs_a_center_logo01.svg" alt="우리은행">
+																				<source srcset="/resources/images/bs_card/bs_a_center_logo01.png">
+																				<img src="/resources/images/bs_card/bs_a_center_logo01.png" alt="우리은행">
 																			</picture>
-																			<object type="image/svg+xml" class="center-cfp" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
+																			<picture class="center-cfp">
+																				<source srcset="/resources/images/bs_card/bs_b_center_logo01.png">
+																				<img src="/resources/images/bs_card/bs_b_center_logo01.png" alt="CFP">
+																			</picture>
 																		</div>
 																		<div class="right">
 																			<dl>
@@ -806,21 +824,24 @@
 																<div class="top">
 																	<div class="left">
 																		<picture class="top-logo03">
-																			<source srcset="/resources/images/bs_card/bs_b_top_logo01.svg">
-																			<img src="/resources/images/bs_card/bs_b_top_logo01.svg" alt="TWO CHAIRS">
+																			<source srcset="/resources/images/bs_card/bs_b_top_logo01.png">
+																			<img src="/resources/images/bs_card/bs_b_top_logo01.png" alt="TWO CHAIRS">
 																		</picture>
 																	</div>
 																	<div class="right">
 																		<picture class="top-aff01">
-																			<source srcset="/resources/images/bs_card/bs_a_aff.svg">
-																			<img src="/resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
+																			<source srcset="/resources/images/bs_card/bs_a_aff.png">
+																			<img src="/resources/images/bs_card/bs_a_aff.png" alt="우리금융그룹">
 																		</picture>
 																	</div>
 																</div>
 																<div class="center">
 																	<div class="title">
 																		<div class="left">
-																			<object type="image/svg+xml" class="center-cfp" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
+																			<picture class="center-cfp">
+																				<source srcset="/resources/images/bs_card/bs_b_center_logo01.png">
+																				<img src="/resources/images/bs_card/bs_b_center_logo01.png" alt="CFP">
+																			</picture>
 																		</div>
 																		<div class="right">
 																			<dl>
@@ -834,8 +855,8 @@
 																		<div class="left">
 																			<div class="left">
 																				<picture class="info-logo01">
-																					<source srcset="/resources/images/bs_card/bs_a_center_logo02.svg">
-																					<img src="/resources/images/bs_card/bs_a_center_logo02.svg" alt="우리은행">
+																					<source srcset="/resources/images/bs_card/bs_a_center_logo01.png">
+																					<img src="/resources/images/bs_card/bs_a_center_logo01.png" alt="우리은행">
 																				</picture>
 																				<div class="location">04632 서울특별시 중구 소공로 51</div>
 																				<div class="email">woori@woorifg.com</div>
@@ -892,14 +913,14 @@
 																<div class="top">
 																	<div class="left">
 																		<picture class="top-logo03">
-																			<source srcset="/resources/images/bs_card/bs_b_top_logo01.svg">
-																			<img src="/resources/images/bs_card/bs_b_top_logo01.svg" alt="TWO CHAIRS">
+																			<source srcset="/resources/images/bs_card/bs_b_top_logo01.png">
+																			<img src="/resources/images/bs_card/bs_b_top_logo01.png" alt="TWO CHAIRS">
 																		</picture>
 																	</div>
 																	<div class="right">
 																		<picture class="top-aff01">
-																			<source srcset="/resources/images/bs_card/bs_a_aff.svg">
-																			<img src="/resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
+																			<source srcset="/resources/images/bs_card/bs_a_aff.png">
+																			<img src="/resources/images/bs_card/bs_a_aff.png" alt="우리금융그룹">
 																		</picture>
 																	</div>
 																</div>
@@ -912,7 +933,10 @@
 																					<img src="/resources/images/bs_card/bs_photo.png" alt="">
 																				</picture>
 																			</figure>
-																			<object type="image/svg+xml" class="center-cfp" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
+																			<picture class="center-cfp">
+																				<source srcset="/resources/images/bs_card/bs_b_center_logo01.png">
+																				<img src="/resources/images/bs_card/bs_b_center_logo01.png" alt="CFP">
+																			</picture>
 																		</div>
 																		<div class="right">
 																			<dl>
@@ -926,8 +950,8 @@
 																		<div class="left">
 																			<div class="left">
 																				<picture class="info-logo01">
-																					<source srcset="/resources/images/bs_card/bs_a_center_logo02.svg">
-																					<img src="/resources/images/bs_card/bs_a_center_logo02.svg" alt="우리은행">
+																					<source srcset="/resources/images/bs_card/bs_a_center_logo01.png">
+																					<img src="/resources/images/bs_card/bs_a_center_logo01.png" alt="우리은행">
 																				</picture>
 																				<div class="location">04632 서울특별시 중구 소공로 51</div>
 																				<div class="email">woori@woorifg.com</div>
