--- a/html/PBWIV/PBWIV090000.html
+++ b/html/PBWIV/PBWIV090000.html
@@ -114,7 +114,21 @@
 					<!-- //tab-content -->
 
 					<div class="financial-news">
-						<p class="description info body-small fc-typography-caption mt16">뉴스데이터는 하루에 2번(오전 7시 이후, 오후 3시 이후)업데이트됩니다. </p>
+
+						<!-- sticky-content -->
+						<div class="sticky-sentinal"></div>
+						<div class="sticky-content content-fluid py0 bg-transparent">
+							<div class="sticky-content-inner">
+								<div class="group content-fluid py12">
+									<div class="right">
+										<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-speaker"></i>전체 듣기</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- //sticky-content -->
+
+						<p class="description info body-small fc-typography-caption">뉴스데이터는 하루에 2번(오전 7시 이후, 오후 3시 이후)업데이트됩니다. </p>
 
 						<div class="financial-news-list mt16">
 							<ul>
@@ -538,16 +552,15 @@
 			<div class="financial-player">
 				<div class="financial-player-top">
 					<div class="financial-player-title">
-						<button type="button" class="btn-xsmall btn-ghost-white btn-round" id="listening">
-							<i class="icon-only icon-16 icon-sound bg-icon-white"></i>
-							<span class="text">전체듣기</span>
+						<div class="financial-player-title">
+							<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
+							<strong>금융뉴스</strong>
 							<span class="soundwave-container">
 								<span class="bar"></span>
 								<span class="bar"></span>
 								<span class="bar"></span>
 							</span>
-						</button>
-
+						</div>
 					</div>
 					<div class="financial-player-controller">
 						<button type="button" aria-label="재생">
@@ -568,16 +581,13 @@
 			<div class="financial-player is-playing">
 				<div class="financial-player-top">
 					<div class="financial-player-title">
-						<button type="button" class="btn-xsmall btn-ghost-white btn-round" id="listening">
-							<i class="icon-only icon-16 icon-sound bg-icon-white"></i>
-							<span class="text">전체듣기</span>
-							<span class="soundwave-container">
-								<span class="bar"></span>
-								<span class="bar"></span>
-								<span class="bar"></span>
-							</span>
-						</button>
-
+						<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
+						<strong>금융뉴스</strong>
+						<span class="soundwave-container">
+							<span class="bar"></span>
+							<span class="bar"></span>
+							<span class="bar"></span>
+						</span>
 					</div>
 					<div class="financial-player-controller">
 						<button type="button" aria-label="일시정지">
@@ -691,18 +701,18 @@
 							</div>
 							<h2 class="headline-medium">[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준</h2>
 							<div class="date">2024-10-15 14:43</div>
-							<div class="related-products">
-								<ul>
-									<li>
-										<div class="anchor anchor-fluid anchor-bg title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</div>
-									</li>
-									<li>
-										<div class="anchor anchor-fluid anchor-bg title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</div>
-									</li>
-									<li>
-										<div class="anchor anchor-fluid anchor-bg title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</div>
-									</li>
-								</ul>
+
+							<div class="btn-wrap py0">
+								<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-speaker"></i>뉴스 듣기</button>
+							</div>
+
+							<div class="tag-wrap d-flex flex-wrap gap4 mt32">
+								<div class="tags tags-small tags-lightGray">연방공개시장위원회</div>
+								<div class="tags tags-small tags-lightGray">시카고상품거래소</div>
+								<div class="tags tags-small tags-lightGray">구매관리자지수</div>
+								<div class="tags tags-small tags-lightGray">뉴욕증권거래소</div>
+								<div class="tags tags-small tags-lightGray">연방공개시장위원회</div>
+								<div class="tags tags-small tags-lightGray">연방공개시장위원회</div>
 							</div>
 							<div class="stroke my32"></div>
 							<p>뉴스 내용이 노출됩니다 뉴스 내용이 노출됩니다뉴스 내용이 노출됩니다뉴스 내용이 노출됩니다뉴스 내용이 노출됩니다.
