--- a/html/PBWIV/PBWIV080000.html
+++ b/html/PBWIV/PBWIV080000.html
@@ -554,12 +554,15 @@
 					} else {
 						$datepicker.find('table tbody tr:nth-last-child(1)').addClass('thisWeek').siblings('').removeClass('thisWeek');
 					}
-					$datepicker.find('table .thisWeek a').trigger('click');
 				} else {
 					$selectWeek.prev('').addClass('thisWeek').siblings('').removeClass('thisWeek');
 				}
 
-				$datepicker.find('table .thisWeek a').trigger('click');
+				$datepicker.find('table .thisWeek td').each(function() {
+					if (!$(this).hasClass('ui-datepicker-other-month')) {
+						$(this).find('a').trigger('click');
+					}
+				})
 				$datepicker.find('table tbody tr').each(function() {
 					if (!$(this).hasClass('thisWeek')) {
 						$(this).css('display', 'none');
@@ -583,7 +586,11 @@
 					$selectWeek.next('').addClass('thisWeek').siblings('').removeClass('thisWeek');
 				}
 
-				$datepicker.find('table .thisWeek a').trigger('click');
+				$datepicker.find('table .thisWeek td').each(function() {
+					if (!$(this).hasClass('ui-datepicker-other-month')) {
+						$(this).find('a').trigger('click');
+					}
+				})
 				$datepicker.find('table tbody tr').each(function() {
 					if (!$(this).hasClass('thisWeek')) {
 						$(this).css('display', 'none');
@@ -616,11 +623,11 @@
 
 
 		$(function() {
-			const schedule04 = ["2025-01-15", "2025-01-16", "2025-01-17", "2025-01-19"]; // 개인 일정
-			const schedule05 = ["2025-01-15", "2025-01-16", "2025-01-18", "2025-01-20"]; // 고객 생일
-			const schedule06 = ["2025-01-15", "2025-01-17", "2025-01-18", "2025-01-21"]; // 수신 만기
-			const schedule07 = ["2025-01-15", "2025-01-17", "2025-01-18", "2025-01-21"]; // 수신 만기
-			const schedule08 = ["2025-01-15", "2025-01-17", "2025-01-18", "2025-01-21"]; // 수신 만기
+			const schedule04 = ["2025-03-05", "2025-03-06", "2025-03-07", "2025-03-09"]; // 개인 일정
+			const schedule05 = ["2025-03-05", "2025-03-06", "2025-03-08", "2025-03-06"]; // 고객 생일
+			const schedule06 = ["2025-03-05", "2025-03-07", "2025-03-08", "2025-03-06"]; // 수신 만기
+			const schedule07 = ["2025-03-05", "2025-03-07", "2025-03-08", "2025-03-06"]; // 수신 만기
+			const schedule08 = ["2025-03-05", "2025-03-07", "2025-03-08", "2025-03-06"]; // 수신 만기
 
 			$("#datepicker_schedule").datepicker({
 				dateFormat: 'yy-mm-dd',
