--- a/html/PBWRE/PBWRE000000.html
+++ b/html/PBWRE/PBWRE000000.html
@@ -113,7 +113,7 @@
 					<div class="report-list mt24">
 						<ul>
 							<li>
-								<a href="#"><span class="title-medium px0">Daily </span></a>
+								<a href="#"><span class="title-medium px0">Daily 모닝브리핑</span></a>
 								<div class="inp inp-toggle-inner-text">
 									<label>
 										<input type="checkbox" aria-label="구독" data-label-checked="구독" data-label="해지" checked>
